<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AttendanceReportQueryFragment"
    android:gravity="center_horizontal"
    android:background="@drawable/luxe_bg"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@color/dirty_gold">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="15sp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/white"/>

        <DatePicker
            android:id="@+id/query_date_from_DP"
            android:layout_width="wrap_content"
            android:layout_height="150sp"
            android:layout_gravity="center_horizontal"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="15sp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/white"/>

        <DatePicker
            android:id="@+id/query_date_to_DP"
            android:layout_width="wrap_content"
            android:layout_height="150sp"
            android:layout_gravity="center_horizontal"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Order By"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dirty_gold"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/search_by_all_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dates"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/search_by_name_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/names"
                android:layout_marginStart="15dp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>

    </LinearLayout>






</LinearLayout>